examples/good/05-02-if.see
void main() {
    if (true) {
        printBool(true);
    }

    if (false) {
        // whoops
    } else {
        printStr("else branch");
    }

    return;
}
