examples/bad/in/00-01-main-required.see
void hello() {
    printStr("Won't work...");

    return;
}
